# lite-obs

./: .gitignore  .gitmodules  CMakeLists.txt  build_apple.sh  ci-before-build.sh
.github/workflows/: build.yml
cmake/: FindFFmpeg.cmake  FindGLM.cmake  FindSRT.cmake  Findglad.cmake  Findx264.cmake
cmake/lib/: FindLiteOBS.cmake
cmake/platform/: android.cmake  ios.cmake  macos.cmake  windows.cmake
examples/android/: settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/app/src/androidTest/java/com/example/liteobs_android_example/: ExampleInstrumentedTest.java
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
examples/android/app/src/main/java/com/example/liteobs_android_example/: Camera2FrameCallback.java  Camera2Wrapper.java  CameraUtil.java  LiteOBS.java  LiteOBSSource.java  MainActivity.java  MicRecoder.java
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/main/res/values-night/: themes.xml
examples/android/app/src/test/java/com/example/liteobs_android_example/: ExampleUnitTest.java
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/android/sdk/: build.gradle.kts
examples/android/sdk/src/androidTest/java/com/liteobskit/sdk/: ExampleInstrumentedTest.java
examples/android/sdk/src/main/: AndroidManifest.xml
examples/android/sdk/src/main/cpp/: CMakeLists.txt  liteobs-jni.cpp
examples/android/sdk/src/main/java/com/liteobskit/sdk/: AOAStreamer.java  LiteOBS.java  LiteOBSSource.java  PhoneCamera.java  PhoneCameraActivity.java
examples/android/sdk/src/main/res/xml/: xxq_accessory_projection_filter.xml
examples/android/sdk/src/test/java/com/liteobskit/sdk/: ExampleUnitTest.java
examples/iOS/iOS-demo/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  TcpServer.cpp  TcpServer.hpp  Test.cpp  Test.hpp  ViewController.h  ViewController.mm  main.m
examples/iOS/iOS-demo.xcodeproj/: project.pbxproj
examples/iOS/iOS-demo.xcodeproj/project.xcworkspace/xcuserdata/dz0401034.xcuserdatad/: UserInterfaceState.xcuserstate
examples/iOS/iOS-demo.xcodeproj/xcshareddata/xcschemes/: iOS-demo.xcscheme
examples/iOS/iOS-demo.xcodeproj/xcuserdata/dz0401034.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/iOS/iOS-demo.xcodeproj/xcuserdata/dz0401034.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/iOS/iOS-demo/Assets.xcassets/live_gift_level6.imageset/: Contents.json
examples/iOS/iOS-demo/Base.lproj/: Main.storyboard
examples/qt/: CMakeLists.txt  fboinsgrenderer.cpp  fboinsgrenderer.h  lite-obs-example.cpp  lite-obs-example.h  logorenderer.cpp  logorenderer.h  main.cpp  main.qml  qml.qrc
include/lite-obs/: lite_encoder.h  lite_encoder_info.h  lite_obs.h  lite_obs_avc.h  lite_obs_callback.h  lite_obs_core_audio.h  lite_obs_core_video.h  lite_obs_defines.h  lite_obs_global.h  lite_obs_internal.h  lite_obs_media_defines.h  lite_obs_output.h  lite_obs_platform_config.h  lite_obs_source.h  lite_output.h  lite_source.h
include/lite-obs/encoder/: aac_encoder.h  h264_encoder.h  lite_aac_encoder.h  lite_h264_encoder.h  mediacodec_encoder.h  videotoolbox_encoder.h  x264_encoder.h
include/lite-obs/graphics/: gl_context_helpers_apple.h  gl_helpers.h  gs_context_gl.h  gs_core_render.h  gs_device.h  gs_program.h  gs_shader.h  gs_shader_info.h  gs_simple_texture_drawer.h  gs_stagesurf.h  gs_subsystem.h  gs_subsystem_info.h  gs_texture.h  gs_texture_render.h  gs_vertexbuffer.h  shaders.h
include/lite-obs/media-io/: audio_info.h  audio_output.h  audio_resampler.h  ffmpeg-formats.h  ffmpeg_formats.h  media-io-defs.h  video-matrices.h  video_frame.h  video_info.h  video_output.h  video_scaler.h
include/lite-obs/output/: aoa_output.h  ffmpeg-srt.h  ffmpeg-url.h  ffmpeg_srt.h  ffmpeg_url.h  file_output.h  flv_mux.h  iOS_muxd_output.h  lite_ffmpeg_mux.h  mpeg_ts_output.h  null_output.h  rtmp_stream_output.h  srt_stream_output.h
include/lite-obs/util/: circlebuf.h  log.h  serialize_op.h  threading.h  util_uint128.h
source/: lite_encoder.cpp  lite_obs.cpp  lite_obs_avc.cpp  lite_obs_core_audio.cpp  lite_obs_core_video.cpp  lite_obs_internal.cpp  lite_obs_output.cpp  lite_obs_source.cpp  lite_output.cpp  lite_source.cpp
source/encoder/: aac_encoder.cpp  h264_encoder.cpp  lite_aac_encoder.cpp  lite_h264_encoder.cpp  mediacodec_encoder.cpp  videotoolbox_encoder.cpp  x264_encoder.cpp
source/graphics/: gl-helpers.cpp  gl_context_helpers_apple.mm  gl_helpers.cpp  gs_context_gl.cpp  gs_core_render.cpp  gs_device.cpp  gs_device_plat.cpp  gs_device_plat_android.cpp  gs_device_plat_apple.mm  gs_device_plat_ios.mm  gs_device_plat_macos.mm  gs_device_plat_windows.cpp  gs_program.cpp  gs_shader.cpp  gs_simple_texture_drawer.cpp  gs_stagesurf.cpp  gs_subsystem.cpp  gs_texture.cpp  gs_texture_render.cpp  gs_vertexbuffer.cpp  shaders.cpp
source/media-io/: audio_output.cpp  audio_resampler.cpp  video-matrices.cpp  video_frame.cpp  video_output.cpp  video_scaler.cpp
source/output/: aoa_output.cpp  file_output.cpp  flv_mux.cpp  iOS_muxd_output.cpp  lite_ffmpeg_mux.cpp  mpeg_ts_output.cpp  null_output.cpp  rtmp_stream_output.cpp  srt_stream_output.cpp
source/output/librtmp/: rtmp-helpers.h  rtmp.c  rtmp.h  time_util.c  time_util.h
source/platform-dep/windows/glad/: CMakeLists.txt
source/util/: log.cpp  threading.cpp
